--- a/photo_book.html
+++ b/photo_book.html
@@ -97,10 +97,10 @@
               <div class="c3-1"></div>
               <div class="c3-2">
                 <div class="menuB">
-                  <div class="menu1"><a href="홈.html" class="ghost-button">홈</a></div>
-                  <div class="menu1"><a href="다이어리.html" class="ghost-button">다이어리</a></div>
-                  <div class="menu1"><a href="사진첩.html" class="ghost-button">사진첩</a></div>
-                  <div class="menu1"><a href="방명록.html" class="ghost-button">방명록</a></div>
+                  <div class="menu1"><a href="home.html" class="ghost-button">홈</a></div>
+                  <div class="menu1"><a href="diary.html" class="ghost-button">다이어리</a></div>
+                  <div class="menu1"><a href="photo_book.html" class="ghost-button">사진첩</a></div>
+                  <div class="menu1"><a href="guest_book.html" class="ghost-button">방명록</a></div>
                 </div>
               </div>
               <div class="c3-3"></div>
